--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
   font-size: 16px;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.all__contents {
+  margin: 0 0 150px 0;
+}
+
 .display {
   display: flex;
   flex-direction: column;
@@ -68,5 +77,129 @@
 .content__piece {
   border: 1px solid red;
   display: flex;
+  justify-content: center;
+}
+
+.gridtext {
+  font-size: 25px;
+  font-weight: 800;
+}
+
+.gridbox {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 150px);
+  gap: 40px;
+  margin: 5px;
+}
+.gridbox__item {
+  border: 1px solid #000;
+  padding: 10px;
+  color: white;
+  background: #aa1453;
+}
+.gridbox .item1 {
+  grid-area: 1/2/1/4;
+}
+.gridbox .item2 {
+  grid-area: 2/1/2/3;
+}
+
+.page {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 2fr 6fr 1fr;
+  height: 100vh;
+  gap: 40px;
+  padding: 50px;
+  color: #fff;
+  margin-bottom: 200px;
+}
+.page__header {
+  grid-area: 1/1/1/4;
+  background: #191a2c;
+  font-size: 100px;
+  display: flex;
+  align-items: center;
+  color: #fff;
+  padding: 20px;
+  gap: 20px;
+}
+.page__artbox {
+  grid-area: 2/1/2/1;
+  gap: 20px;
+  height: 100%;
+  border: 1px solid #000;
+}
+.page__aticles {
+  background: #ac4444;
+  margin-bottom: 20px;
+}
+.page .hightext {
+  font-size: 50px;
+}
+.page__favbox {
+  grid-area: 2/2/2/2;
+  gap: 20px;
+  height: 100%;
+  border: 1px solid #000;
+}
+.page__favorites {
+  background: #50ac90;
+  margin-bottom: 20px;
+}
+.page__postbox {
+  gap: 20px;
+  grid-area: 2/3/2/3;
+  border: 1px solid #000;
+}
+.page__posts {
+  background: rgb(78, 99, 156);
+  margin-bottom: 20px;
+}
+.page__posts > ul {
+  margin-left: 20px;
+}
+.page__footer {
+  gap: 2 0px;
+  grid-area: 3/2/3/4;
+  background: #191a2c;
+  color: white;
+  font-size: 40px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+.page .padbox {
+  padding: 20px;
+}
+
+.griditem {
+  display: grid;
+  width: 680px;
+  height: 680px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  padding: 20px;
+  border: 1px solid #000;
+  margin: 0 0 50px 15px;
+}
+.griditem__element1 {
+  grid-area: 1/1/1/1;
+}
+.griditem__element2 {
+  grid-area: 2/3/2/3;
+}
+.griditem__element3 {
+  grid-area: 3/2/3/2;
+}
+.griditem .gridel {
+  border: 1px solid #000;
+  font-size: 30px;
+  background: #ecac21;
+  color: white;
+  display: flex;
+  align-items: center;
   justify-content: center;
 }/*# sourceMappingURL=style.css.map */
