--- a/style.css
+++ b/style.css
@@ -202,4 +202,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.gridcontainer {
+  display: grid;
+  grid-template-columns: 200px 1fr 200px;
+  grid-template-rows: 100px 500px 100px;
+  border: 1px solid #000;
+  margin: 5px;
+}
+.gridcontainer__item1 {
+  background: red;
+}
+.gridcontainer__item2 {
+  background: orange;
+}
+.gridcontainer__item3 {
+  background: green;
+}
+.gridcontainer__item4 {
+  background: blue;
+}
+.gridcontainer__item5 {
+  background: purple;
+}
+.gridcontainer .gridelement {
+  padding: 10px;
+  color: #fff;
+  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  -webkit-text-fill-color: transparent;
+  font-size: 45px;
+  font-weight: 900;
 }/*# sourceMappingURL=style.css.map */
